[#155] fix: custom CSS causing yaml-editor buttons to disappear in default OpenShift UI
Scoped the CSS under .broker-yaml-editor to prevent it from hiding default
OpenShift YAML editor buttons.

--- a/src/shared-components/YamlEditorView/YamlEditorView.css
+++ b/src/shared-components/YamlEditorView/YamlEditorView.css
@@ -1,10 +1,16 @@
-#save-changes {
+.broker-yaml-editor #save-changes {
   display: none;
 }
-#reload-object {
+.broker-yaml-editor #reload-object {
+  display: none;
+}
+.broker-yaml-editor #cancel {
   display: none;
 }
 
-#cancel {
-  display: none;
+.broker-yaml-editor {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
